--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@netlify/functions": "^0.7.2",
     "dotenv": "^10.0.0",
+    "netlify-cli": "^6.9.11",
     "node-fetch": "^3.0.0"
   }
 }
