--- a/package.json
+++ b/package.json
@@ -9,13 +9,9 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/renderer-vue": "^0.1.7",
-    "astro": "^0.20.5"
+    "astro": "^0.20.8"
   },
   "dependencies": {
-    "@netlify/functions": "^0.7.2",
-    "dotenv": "^10.0.0",
-    "netlify-cli": "^6.9.11",
-    "node-fetch": "^3.0.0"
+    "dotenv": "^10.0.0"
   }
 }
