--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.20.8"
+    "astro": "^0.20.8",
+    "prettier": "2.6.2"
   },
   "dependencies": {
     "date-fns": "^2.25.0",
