docker-compose yml change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 services:
   app:
-    image: inga-test:latest
+    image: is-nebraska-great-again:latest
     restart: unless-stopped
     ports:
       - "3001:3001"
