--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@example/starter",
-  "version": "0.0.1",
+  "name": "is-nebraska-great-again",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -9,12 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.20.8",
+    "astro": "^1.0.0-beta.10",
     "prettier": "2.6.2"
   },
   "dependencies": {
-    "date-fns": "^2.25.0",
-    "date-fns-tz": "^1.1.6",
-    "dotenv": "^10.0.0"
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.3.3",
+    "dotenv": "^16.0.0"
   }
 }
