--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
+    "start": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.10",
-    "prettier": "2.6.2"
+    "@astrojs/react": "^0.3.0",
+    "astro": "^1.0.0-beta.66",
+    "prettier": "2.6.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
     "date-fns": "^2.28.0",
